--- a/tech.html
+++ b/tech.html
@@ -161,9 +161,22 @@
           </ol>
           <h4><b>Cloud Services</b></h4>
           <ol>
-            <li>reference1</li>
-            <li>reference2</li>
-            <li>reference3</li>
+            <li>AUTOCRYPT. 2020. 4 Car Features That Rely On Vehicle-to-Cloud Connectivity - AUTOCRYPT. [online] Available at: <https://autocrypt.io/4-car-features-rely-on-vehicle-to-cloud-connectivity/> [Accessed 17 April 2022]. </li>
+            <li>LUXUO. 2020. 5 Developments In Cloud Computing. [online] Available at: <https://www.luxuo.com/lifestyle/5-developments-in-cloud-computing.html> [Accessed 27 April 2022]. </li>
+            <li>Accenture.com. 2019. Cloud Computing in the Automotive Industry | Accenture. [online] Available at: <https://www.accenture.com/au-en/insights/automotive/cloud-imperative> [Accessed 17 April 2022]. </li>
+            <li>MasterDC. 2022. Cloud technology in cars can save your life and make it more enjoyable - MasterDC. [online] Available at: <https://www.masterdc.com/blog/cloud-technology-in-cars/#:~:text=By%20using%20cloud%2Dbased%203D,preparing%20a%20report%20for%20work.> [Accessed 19 April 2022]. </li>
+            <li>The Forecast By Nutanix. 2020. Effects of Cloud Computing - Cloud Computing Effect on IT Jobs. [online] Available at: <https://www.nutanix.com/theforecastbynutanix/business/cloud-computing-reconfigures-workforce> [Accessed 20 April 2022]. </li>
+            <li>evolving, H., 2021. How the data centre workforce is evolving. [online] ARN. Available at: <https://www.arnnet.com.au/article/686135/how-data-centre-workforce-evolving/> [Accessed 19 April 2022]. </li>
+            <li>Pentanasolutions.com. 2020. How Cloud Computing is Changing the Automotive Industry. [online] Available at: <https://www.pentanasolutions.com/index.php/en/blog/view/how-cloud-computing-is-changing-the-automotive-industry> [Accessed 18 April 2022]. </li>
+            <li>Cloud-computing.tmcnet.com. 2019. Impacts Of Cloud Computing In Our Everyday Life. [online] Available at: <https://cloud-computing.tmcnet.com/breaking-news/articles/446806-impacts-cloud-computing-our-everyday-life.htm#:~:text=Cloud%20computing%20has%20enabled%20students,a%20complicated%20and%20expensive%20infrastructure.> [Accessed 16 April 2022]. </li>
+            <li>Ranger, S., 2020. What is cloud computing? Everything you need to know about the cloud explained | ZDNet. [online] ZDNet. Available at: <https://www.zdnet.com/article/what-is-cloud-computing-everything-you-need-to-know-about-the-cloud/> [Accessed 18 April 2022]. </li>
+            <li>TechRepublic. 2021. The most important cloud advances of the decade. [online] Available at: <https://www.techrepublic.com/article/the-most-important-cloud-advances-of-the-decade/> [Accessed 22 April 2022]. </li>
+            <li>Builtin.com. 2020. What Is Cloud Computing? How Does Cloud Computing Work? | Built In. [online] Available at: <https://builtin.com/cloud-computing> [Accessed 20 April 2022]. </li>
+            <li>Saleem, S., 2021. Exploring the Future of Cloud Computing. [online] Learn.g2.com. Available at: <https://learn.g2.com/future-of-cloud-computing> [Accessed 21 April 2022]. </li>
+            <li>Wwt.com. 2021. The Current State of Servers: 2020 Trends and Expectations. [online] Available at: <https://www.wwt.com/article/the-current-state-of-servers-trends-and-expectations> [Accessed 21 April 2022]. </li>
+            <li>Reed, J., 2022. What Is the Difference Between Physical Servers and VMs?. [online] Official NAKIVO Blog. Available at: <https://www.nakivo.com/blog/physical-servers-vs-virtual-machines-key-differences-similarities/> [Accessed 19 April 2022]. </li>
+            <li>Eescorporation.com. 2021. [online] Available at: <https://www.eescorporation.com/limitations-of-cloud-computing/> [Accessed 17 April 2022]. </li>
+            
           </ol>
         </div> <!-- / .technologies_content -->
 
