--- a/tech.html
+++ b/tech.html
@@ -152,6 +152,10 @@
             <li>Replika AI, n.d.: https://replika.ai/ Accessed: 18/4/2022 </li>
             <li>Depression, Author: World Health Organization, Sep 13 2021: https://www.who.int/news-room/fact-sheets/detail/depression Accessed: 18/4/2022 </li>
             <li>The A-Z Of Replika Chatbot, Author: Partap A., Jan 20 2022: https://botpenguin.com/replika-chatbot/ Accessed: 18/4/2022 </li>
+            <li>Education, I., 2022. What is Natural Language Processing?. [online] Ibm.com. Available at: <https://www.ibm.com/cloud/learn/natural-language-processing> [Accessed 16 April 2022]. </li>
+            <li>IT Business Edge. 2022. The Future of Natural Language Processing is Bright | ITBE. [online] Available at: <https://www.itbusinessedge.com/development/the-future-of-natural-language-processing-is-bright/#:~:text=According%20to%20the%20research%20firm,the%20years%202017%20and%202025.> [Accessed 16 April 2022]. </li>
+            <li>Oracle.com. 2019. What is a Chatbot?. [online] Available at: <https://www.oracle.com/au/chatbots/what-is-a-chatbot/> [Accessed 15 April 2022]. </li>
+            <li>Zhang, X., 2019. Council Post: The Evolution Of Natural Language Processing And Its Impact On AI. [online] Forbes. Available at: <https://www.forbes.com/sites/forbestechcouncil/2018/11/06/the-evolution-of-natural-language-processing-and-its-impact-on-ai/?sh=7dd7096c1119> [Accessed 20 April 2022]. </li>            
           </ol>
           <h4><b>Cyber Security</b></h4>
           <ol>
