--- a/work.html
+++ b/work.html
@@ -47,8 +47,11 @@
           <h3><u>IT Work</u></h3>
         </div>
         <div class="organizational_chart" style="text-align: center;padding-top: 15px;">
-          <p>not sure what tag to add but video goes here --> class includes required css like overflow: hidden;</p>
-        </div>
+          <center>
+              <p><figcaption>Kaleid AI interview with Russell Garner (2022).</figcaption>
+              <iframe width="320" height="240" src="https://youtu.be/YtssBAPT8t8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+          </center>
+            </div>
         <div class="transcript_content">
           <p>transcript content</p>
         </div>
