--- a/work.html
+++ b/work.html
@@ -49,12 +49,9 @@
         <div class="organizational_chart" style="text-align: center;padding-top: 15px;">
           <center>
               <p><figcaption>Kaleid AI interview with Russell Garner (2022).</figcaption>
-              <iframe width="320" height="240" src="https://youtu.be/YtssBAPT8t8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+              <iframe src="https://www.youtube.com/watch?v=YtssBAPT8t8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
           </center>
             </div>
-        <div class="transcript_content">
-          <p>transcript content</p>
-        </div>
         <div class="mini_header">
           <h4><b>Who is the interviewee?</b></h4>
         </div>
