--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
         <div class="organizational_chart" style="text-align: center;padding-top: 15px;">
           <center>
               <p><figcaption>Kaleid AI interview with Russell Garner (2022).</figcaption>
-              <iframe src="https://www.youtube.com/watch?v=YtssBAPT8t8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/YtssBAPT8t8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </center>
             </div>
         <div class="mini_header">
