--- a/work.html
+++ b/work.html
@@ -48,8 +48,8 @@
         </div>
         <div class="organizational_chart" style="text-align: center;padding-top: 15px;">
           <center>
-              <p><figcaption>Kaleid AI interview with Russell Garner (2022).</figcaption>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/YtssBAPT8t8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <figcaption>Kaleid AI interview with Russell Garner (2022).</figcaption>
+              <iframe width="300" height="auto" src="https://www.youtube.com/embed/YtssBAPT8t8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </center>
             </div>
         <div class="mini_header">
