--- a/project.html
+++ b/project.html
@@ -16,8 +16,8 @@
         </div>
 
         <div class="header_text">
-          <h1 class="title">Company Name</h1>
-          <h1 class="title">Slogan</h1>
+          <h1 class="title">KALEID A.I.</h1>
+          <h1 class="title">Collecting and Connecting Data</h1>
         </div>
 
         <div class="header_img_and_spacing">
