--- a/agenda.html
+++ b/agenda.html
@@ -65,6 +65,10 @@
           </div>
           <ul>
             <li><a href="040422a2agenda.html">Agenda 1</a></li>
+            <li><a href="070422a2agenda.html">Agenda 2</a></li>
+            <li>example3</li>
+            <li>example2</li>
+            <li>example3</li>
             <li>example2</li>
             <li>example3</li>
           </ul>
