--- a/agenda.html
+++ b/agenda.html
@@ -69,7 +69,7 @@
             <li><a href="110422a2agenda.html">Agenda 3</a></li>
             <li><a href="190422a2agenda.html">Agenda 4</a></li>
             <li><a href="210422a2agenda.html">Agenda 5</a></li>
-            <li>example2</li>
+            <li><a href="280422a2agenda.html">Agenda 6</a></li>
             <li>example3</li>
           </ul>
         </div>
