--- a/agenda.html
+++ b/agenda.html
@@ -80,7 +80,7 @@
           </div>
           <ul>
             <li><a href="https://www.youtube.com/watch?v=LnD0uOJ6l1s">Meeting 1</a></li>
-            <li>example2</li>
+            <li><a href="https://www.youtube.com/watch?v=CSt7S5r_xas">Meeting 2</a></li>
             <li>example3</li>
             <li>example1</li>
             <li>example2</li>
