--- a/agenda.html
+++ b/agenda.html
@@ -81,11 +81,11 @@
           <ul>
             <li><a href="https://www.youtube.com/watch?v=LnD0uOJ6l1s">Meeting 1</a></li>
             <li><a href="https://www.youtube.com/watch?v=CSt7S5r_xas">Meeting 2</a></li>
-            <li>example3</li>
-            <li>example1</li>
-            <li>example2</li>
-            <li>example3</li>
-            <li>example3</li>
+            <li><a href="https://www.youtube.com/watch?v=J8oJCjgyFdU">Meeting 3</a></li>
+            <li><a href="">Meeting 4</a></li>
+            <li><a href="">Meeting 5</a></li>
+            <li><a href="">Meeting 6</a></li>
+            <li><a href="">Meeting 7</a></li>
           </ul>
         </div> <!-- / .agenda_column -->
 
