--- a/agenda.html
+++ b/agenda.html
@@ -82,7 +82,7 @@
             <li><a href="https://www.youtube.com/watch?v=LnD0uOJ6l1s">Meeting 1</a></li>
             <li><a href="https://www.youtube.com/watch?v=CSt7S5r_xas">Meeting 2</a></li>
             <li><a href="https://www.youtube.com/watch?v=J8oJCjgyFdU">Meeting 3</a></li>
-            <li><a href="">Meeting 4</a></li>
+            <li><a href="https://www.youtube.com/watch?v=M3M0wA4BhfY">Meeting 4</a></li>
             <li><a href="">Meeting 5</a></li>
             <li><a href="">Meeting 6</a></li>
             <li><a href="">Meeting 7</a></li>
