--- a/agenda.html
+++ b/agenda.html
@@ -83,7 +83,7 @@
             <li><a href="https://www.youtube.com/watch?v=CSt7S5r_xas">Meeting 2</a></li>
             <li><a href="https://www.youtube.com/watch?v=J8oJCjgyFdU">Meeting 3</a></li>
             <li><a href="https://www.youtube.com/watch?v=M3M0wA4BhfY">Meeting 4</a></li>
-            <li><a href="">Meeting 5</a></li>
+            <li><a href="https://www.youtube.com/watch?v=7ddvo84yPFg">Meeting 5</a></li>
             <li><a href="">Meeting 6</a></li>
             <li><a href="">Meeting 7</a></li>
           </ul>
