--- a/agenda.html
+++ b/agenda.html
@@ -84,7 +84,7 @@
             <li><a href="https://www.youtube.com/watch?v=J8oJCjgyFdU">Meeting 3</a></li>
             <li><a href="https://www.youtube.com/watch?v=M3M0wA4BhfY">Meeting 4</a></li>
             <li><a href="https://www.youtube.com/watch?v=7ddvo84yPFg">Meeting 5</a></li>
-            <li><a href="">Meeting 6</a></li>
+            <li><a href="https://www.youtube.com/watch?v=-cAd0C2jD1A">Meeting 6</a></li>
             <li><a href="">Meeting 7</a></li>
           </ul>
         </div> <!-- / .agenda_column -->
