--- a/agenda.html
+++ b/agenda.html
@@ -64,12 +64,12 @@
             <h2>Agenda</h2>
           </div>
           <ul>
-            <li><a href="040422a2agenda.html">Agenda 1</a></li>
-            <li><a href="070422a2agenda.html">Agenda 2</a></li>
-            <li><a href="110422a2agenda.html">Agenda 3</a></li>
-            <li><a href="190422a2agenda.html">Agenda 4</a></li>
-            <li><a href="210422a2agenda.html">Agenda 5</a></li>
-            <li><a href="280422a2agenda.html">Agenda 6</a></li>
+            <li><a href="040422a2agenda.html" target="_blank">Agenda 1</a></li>
+            <li><a href="070422a2agenda.html" target="_blank">Agenda 2</a></li>
+            <li><a href="110422a2agenda.html" target="_blank">Agenda 3</a></li>
+            <li><a href="190422a2agenda.html" target="_blank">Agenda 4</a></li>
+            <li><a href="210422a2agenda.html" target="_blank">Agenda 5</a></li>
+            <li><a href="280422a2agenda.html" target="_blank">Agenda 6</a></li>
             <li>example3</li>
           </ul>
         </div>
@@ -79,13 +79,13 @@
             <h2>Recording</h2>
           </div>
           <ul>
-            <li><a href="https://www.youtube.com/watch?v=LnD0uOJ6l1s">Meeting 1</a></li>
-            <li><a href="https://www.youtube.com/watch?v=CSt7S5r_xas">Meeting 2</a></li>
-            <li><a href="https://www.youtube.com/watch?v=J8oJCjgyFdU">Meeting 3</a></li>
-            <li><a href="https://www.youtube.com/watch?v=M3M0wA4BhfY">Meeting 4</a></li>
-            <li><a href="https://www.youtube.com/watch?v=7ddvo84yPFg">Meeting 5</a></li>
-            <li><a href="https://www.youtube.com/watch?v=-cAd0C2jD1A">Meeting 6</a></li>
-            <li><a href="">Meeting 7</a></li>
+            <li><a href="https://www.youtube.com/watch?v=LnD0uOJ6l1s" target="_blank">Meeting 1</a></li>
+            <li><a href="https://www.youtube.com/watch?v=CSt7S5r_xas" target="_blank">Meeting 2</a></li>
+            <li><a href="https://www.youtube.com/watch?v=J8oJCjgyFdU" target="_blank">Meeting 3</a></li>
+            <li><a href="https://www.youtube.com/watch?v=M3M0wA4BhfY" target="_blank">Meeting 4</a></li>
+            <li><a href="https://www.youtube.com/watch?v=7ddvo84yPFg" target="_blank">Meeting 5</a></li>
+            <li><a href="https://www.youtube.com/watch?v=-cAd0C2jD1A" target="_blank">Meeting 6</a></li>
+            <li><a href="" target="_blank">Meeting 7</a></li>
           </ul>
         </div> <!-- / .agenda_column -->
 
