--- a/agenda.html
+++ b/agenda.html
@@ -85,7 +85,7 @@
             <li><a href="https://www.youtube.com/watch?v=M3M0wA4BhfY" target="_blank">Meeting 4</a></li>
             <li><a href="https://www.youtube.com/watch?v=7ddvo84yPFg" target="_blank">Meeting 5</a></li>
             <li><a href="https://www.youtube.com/watch?v=-cAd0C2jD1A" target="_blank">Meeting 6</a></li>
-            <li><a href="" target="_blank">Meeting 7</a></li>
+            <li><a href="https://www.youtube.com/watch?v=TKzjgH5flUA" target="_blank">Meeting 7</a></li>
           </ul>
         </div> <!-- / .agenda_column -->
 
