--- a/agenda.html
+++ b/agenda.html
@@ -70,7 +70,7 @@
             <li><a href="190422a2agenda.html" target="_blank">Agenda 4</a></li>
             <li><a href="210422a2agenda.html" target="_blank">Agenda 5</a></li>
             <li><a href="280422a2agenda.html" target="_blank">Agenda 6</a></li>
-            <li>example3</li>
+            <li><a href="300422a2agenda.html" target="_blank">Agenda 7</a></li>
           </ul>
         </div>
 
