--- a/team.html
+++ b/team.html
@@ -75,6 +75,9 @@
               <p>s3895337@student.rmit.edu.au</p>
               <p>Hobbies: Guitar, Cat.</p>
               <p>Myer-Briggs: Debater.</p>
+              <p>Learning Style: Auditory</p>
+              <p>Creativity: Complexity</p>
+            
               
             </div>
 
@@ -115,6 +118,8 @@
               <p>23286616@student.rmit.edu.au</p>
               <p>Hobbies: Piano, Psychology.</p>
               <p>Myer-Briggs: Advocate. </p>
+              <p>Big Five: Openess</p>
+              <p>Creativity: Thinker</p>
             </div>
 
           </div>
@@ -153,6 +158,8 @@
                <p>s394438@student.rmit.edu.au</p>
                <p>Hobbies: Writing, Gaming.</p>
                <p>Myer-Briggs: Advocate.</p>
+               <p>Big Five: Openess</p>
+               <p>Creativity: Reflective</p>
             </div>
 
           </div>
@@ -192,6 +199,8 @@
               <p>s3955987@student.rmit.edu.au</p>
               <p>Hobbies: Food, Movies.</p>
               <p>Myer-Briggs: Consul</p>
+              <p>Learning Style: Tactile</p>
+              <p>Creativity: Complexity</p>
             </div>
 
           </div>
@@ -231,6 +240,8 @@
               <p>s3957629@student.rmit.edu.au</p>
               <p>Hobbies: Hardware, Graphics.</p>
               <p>Myer-Briggs: Entrepreneur.</p>
+              <p>Learning Style: Adaptable</p>
+              <p>Creativity: Abstract</p>
             </div>
 
           </div>
@@ -270,6 +281,8 @@
               <p>s3942994@student.rmit.edu.au</p>
               <p>Hobbies: Tradings Cards, Charity.</p>
               <p>Myer-Briggs: Architect.</p>
+              <p>Learning Style: Visual</p>
+              <p>Creativity: Paradox</p>
             </div>
 
           </div>
