--- a/project.html
+++ b/project.html
@@ -68,7 +68,7 @@
         <div class="mini_header">
           <h4><b>Outcome of Prototype</b></h4>
         </div>
-        <p>If this project is successful, then a stable and usable application prototype will be the result. This would work efficiently and effectively, with elements of thought undertaken towards the overall User Experience and program design. [Summary of what we intend to theoretically create in this prototype]. If this prototype succeeds in the above, this will be a massive steppingstone to publishing the application to users, granting them the opportunity to actively record and recall their experiences in a unique and interesting way. </p>
+        <p>If this project is successful, then a stable and usable application prototype will be the result. This would work efficiently and effectively, with elements of thought undertaken towards the overall User Experience and program design. In it's BETA phase the prototype can only display the interface with the next plan to build the interactive design. This is a massive steppingstone to publishing the application to users, granting them the opportunity to actively record and recall their experiences in a unique and interesting way. </p>
         <a href="https://www.figma.com/proto/8aw3qacAd9SO34GI2CJH2R/Intro-to-Info-Tech-A2-MOCKUP--?node-id=1%3A2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2" target="_blank">Click Here for Prototype</a>
         <div class="mini_header">
           <h4><b>Future State</b></h4>
